[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Selection Pane/Gaz Mobile.png" type="Texture" id=1]
[ext_resource path="res://Assets/Selection Pane/beach car.png" type="Texture" id=2]
[ext_resource path="res://Assets/Selection Pane/Bike.png" type="Texture" id=3]
[ext_resource path="res://Assets/Selection Pane/Hot rod.png" type="Texture" id=4]
[ext_resource path="res://Assets/Selection Pane/monster truck.png" type="Texture" id=5]
[ext_resource path="res://Assets/Selection Pane/African Car.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/choose car.png" type="Texture" id=7]
[ext_resource path="res://Scenes/CharacterSelect.gd" type="Script" id=8]
[ext_resource path="res://Assets/UI/Arrowhovered.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/ArrowsIdle.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/next.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/nextbuttonh.png" type="Texture" id=12]

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Player0",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Player1",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Player2",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "Player3",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Player4",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "Player5",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Player6",
"speed": 5.0
} ]

[node name="CharacterSelect" type="Node2D"]
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="."]
material = SubResource( 2 )
margin_right = 3344.0
margin_bottom = 2208.0

[node name="PlayerSelect" type="AnimatedSprite" parent="."]
position = Vector2( 192, 120 )
scale = Vector2( 0.115299, 0.115299 )
frames = SubResource( 1 )
animation = "Player0"

[node name="next" type="TextureButton" parent="."]
margin_left = 344.0
margin_top = 112.0
margin_right = 376.0
margin_bottom = 144.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
expand = true

[node name="previous" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 144.0
margin_right = 82.0
margin_bottom = 178.0
rect_rotation = -179.779
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
expand = true

[node name="nextupper" type="TextureButton" parent="."]
margin_left = 328.0
margin_top = 8.0
margin_right = 368.0
margin_bottom = 48.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
expand = true

[node name="backupper" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 48.0
margin_right = 88.0
margin_bottom = 88.0
rect_rotation = -179.826
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
expand = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 136.0
margin_top = 16.0
margin_right = 251.0
margin_bottom = 44.0
texture_normal = ExtResource( 7 )
expand = true

[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="nextupper" to="." method="_on_nextupper_pressed"]
[connection signal="pressed" from="backupper" to="." method="_on_backupper_pressed"]
